# glass-doc-chat

./: .gitignore  README.md  app.py  commands.ps1  pyproject.toml  test.txt
chroma_db_storage/: chroma.sqlite3
generate_pdfs/: generate_pdfs.py
